feat: implement actor
