# docs/swagger.yaml
@@ -86,6 +86,34 @@ paths:
       tags:
       - actor
   /actor/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete actor
+      parameters:
+      - description: Actor ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete actor
+      tags:
+      - actor
     put:
       consumes:
       - application/json
